[package]
name = "mmocli"
version = "0.1.0"
edition = "2021"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mmolib = {path = "../mmolib", version = "*"}
bevy = {version = "0.7.0", features = ["bevy_winit","bevy_gltf"] }
tokio = { version = "1.18.2", features = ["full"] }
tokio-tungstenite = "*"
futures = "0.3"
fltk = { version = "^1.3", features = ["fltk-bundled"] }


[dependencies.log]
version = "0.4.17"

[dependencies.clap]
features = ["derive"]
version = "3.1.18"

