[package]
name = "mmolib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const-fnv1a-hash = "1.0.1"
serde_json = "1.0"
serde_cbor = "0.11.2"
rand = "0.8.5"
[dependencies.serde]
features = ["derive"]
version = "1.0"
