[dependencies]
bcrypt = "0.13.0"
const-fnv1a-hash = "1.0.1"
jsonwebtoken = "8.1.0"
serde_json = "1.0"
serde_cbor = "0.11.2"
tokio = { version = "1.18.2", features = ["full"] }
tokio-tungstenite = "0.17.2"
futures = "0.3"
mmolib = {path = "../mmolib", version = "*"}
crossbeam-channel = "0.5.4"
tracing = "0.1.36"
hashbrown = "0.12.3"
tracing-subscriber = "0.3.15"
redis = { version = "0.21.6", features = ["tokio-comp"] }
[dependencies.clap]
features = ["derive"]
version = "3.1.18"


[dependencies.serde]
features = ["derive"]
version = "1.0"

[package]
edition = "2021"
name = "mmoserv"
version = "0.1.0"
[[bin]]
name = "mmoserv"
path = "src/main.rs"